--- a/services.html
+++ b/services.html
@@ -94,7 +94,7 @@
             <a href="https://telegram.me/taras_iva"><img src="icons/telegram.png" alt="Telegram"></a>
             <a href="whatsapp://send?text=Hi there!&phone=+12066730120"><img src="icons/whatsapp.png" alt="Whatsapp"></a>
           </div></li>
-          <li><a href="mailto:taras.malyy@gmail.com">taras.malyy@gmail.com</a></li>
+          <li><a href="mailto:team@ascendex.digital">team@ascendex.digital</a></li>
         </ul>
         <ul class="social-links">
           <li><a target="_blank" href="https://www.facebook.com/ascendexdigital"><img src="icons/facebook.png" alt="Facebook"></a></li>
